# learnchars

./: .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  TODO  docker-compose.yaml  pyproject.toml
scripts/: analyze_text.py  docker-kindle-img.sh  easy_words.py  get_sentences.py  get_vocab.py  kindle_img.py  progress.py  skritter_dl.py
src/learnchars/: cedict.py  chars.py  hsk.py  kindle.py  skritter.py  textfile.py
src/learnchars/data/: junda.tsv
tests/: test_cedict.py  test_hsk.py  test_learnchars.py  test_next_char.py  test_skritter.py  test_textfile.py
tests/test_files/: skritter_test_newlines.tsv  skritter_test_unique.tsv  test_nextchar.tsv  textfile.txt  textfile_vocab.tsv
