[tool.poetry]
name = "learnchars"
version = "0.1"
description = "A tool to help me pick vocabulary words to learn"
authors = ["Ian Kilgore <iank@iank.org>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
wordfreq = {extras = ["cjk"], version = "^3.0.2"}
zhon = "^1.1.5"
cedict-utils = "^0.0.13"
pillow = "^9.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
flake8 = "^5.0.4"
flake8-bugbear = "^22.9.23"
pytest-datafiles = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
skritter_dl = "learnchars.skritter:main"
